--- a/app/admin/media/css/style.css
+++ b/app/admin/media/css/style.css
@@ -36,12 +36,32 @@ a:not(.btn):hover {
 /**
  * Sidebar
  */
+.pointer {cursor: pointer;}
+
+.navbar {
+	border-bottom: 0;
+	box-shadow: 0 0 2rem 0 rgba(33,37,41,.1);
+	align-items: center;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	padding: .875rem 1.375rem;
+	position: relative;
+}
+
+.navbar-expand {
+	flex-wrap: nowrap;
+	justify-content: flex-start;
+}
+
 #sidebar {
   min-height: 100vh;
+  position: fixed;
+  z-index: 2000;
 }
 
 #sidebar ul li a {
-	color: rgba(233,236,239,.5);
+    color: #fff;
 	padding-top: 0.3rem;
 	padding-bottom: 0.3rem;
 	font-size: 1.1em;
@@ -49,7 +69,7 @@ a:not(.btn):hover {
 }
 
 #sidebar ul li a:hover {
-    color: #fff;
+    color: rgb(207, 199, 199);
 }
 
 #sidebar ul li a.active {
@@ -60,7 +80,7 @@ a:not(.btn):hover {
 }
 
 #sidebar ul li ul a {
-	color: #666;
+    color: #fff;
 	padding-left: 30px;
 }
 
@@ -69,9 +89,9 @@ a:not(.btn):hover {
 	padding-right: 5px;
 }
 
-#sidebar .nav-pills .nav-link {
+/* #sidebar .nav-pills .nav-link {
 	border-radius: 0;
-}
+} */
 
 /**
  * Feather icons
