--- a/app/admin/template/administrative/customer/contact.twig
+++ b/app/admin/template/administrative/customer/contact.twig
@@ -9,10 +9,10 @@
 {% include 'administrative/customer/modal.customer_contact.twig' with {'id': 'manage-customer-contact','redirect': '/administrative/customer/contact?id=' ~ customer.id, 'modal_size': 'lg'} %}
 
 
-<div class="row">
+<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-md-4 g-4">
 	{% for customer_contact in customer_contacts %}
-		<div class="col-3 mb-3">
-			<div class="card customer_contact h-100" data-customer-contact-id="{{ customer_contact.id }}">
+		<div class="col">
+			<div class="card h-100 customer_contact" data-customer-contact-id="{{ customer_contact.id }}">
 				<div class="card-body">
 					<span class="badge bg-secondary actions visually-hidden">
 						<a href="#manage-customer-contact" class="text-white" data-bs-toggle="modal" data-customer-id="{{ customer.id }}" data-customer-contact-id="{{ customer_contact.id }}">
@@ -22,25 +22,52 @@
 							<i data-feather="trash-2"></i>
 						</a>
 					</span>
-
 					{{ base.customer_contact(customer_contact, settings) }}
 				</div>
 			</div>
 		</div>
 	{% endfor %}
-	<div class="col-3">
-		<div class="card h-100">
-			<div class="card-body d-flex h-100 w-100 text-center">
-				<div class="align-self-center w-100">
-					<a class="btn btn-primary" href="#manage-customer-contact" data-toggle="modal" data-customer-id="{{ customer.id }}" data-customer-contacts="0">
-						{% trans "Create new contact" %}
-					</a>
-				</div>
 
+	<div class="col">
+		<div class="card h-100 w-100">
+			<div class="card-body d-flex justify-content-center align-items-center">
+				<a class="btn btn-primary" href="#manage-customer-contact" data-bs-toggle="modal" data-customer-id="{{ customer.id }}" data-customer-contacts="0">
+					{% trans "Create new contact" %}
+				</a>
 			</div>
 		</div>
 	</div>
 </div>
+
+{# <div class="row">
+	{% for customer_contact in customer_contacts %}
+		<div class="col-lg-3 col-md-6 col-sm-12 d-flex mb-3">
+			<div class="card w-100 customer_contact" data-customer-contact-id="{{ customer_contact.id }}">
+				<div class="card-body">
+					<span class="badge bg-secondary actions visually-hidden">
+						<a href="#manage-customer-contact" class="text-white" data-bs-toggle="modal" data-customer-id="{{ customer.id }}" data-customer-contact-id="{{ customer_contact.id }}">
+							<i data-feather="edit"></i>
+						</a>
+						<a href="javascript:void(0);" class="text-white" onclick="delete_contact({{ customer_contact.id }})">
+							<i data-feather="trash-2"></i>
+						</a>
+					</span>
+					{{ base.customer_contact(customer_contact, settings) }}
+				</div>
+			</div>
+		</div>
+	{% endfor %}
+
+	<div class="col-lg-3 col-md-6 col-sm-12 d-flex mb-3">
+		<div class="card w-100">
+			<div class="card-body d-flex justify-content-center align-items-center">
+				<a class="btn btn-primary" href="#manage-customer-contact" data-bs-toggle="modal" data-customer-id="{{ customer.id }}" data-customer-contacts="0">
+					{% trans "Create new contact" %}
+				</a>
+			</div>
+		</div>
+	</div>
+</div> #}
 
 <script type="text/javascript">
 
