--- a/app/admin/template/administrative/customer/recurring.twig
+++ b/app/admin/template/administrative/customer/recurring.twig
@@ -3,14 +3,13 @@
 {% import '_default/macro.base.twig' as base %}
 
 {% block tab %}
-
 	{% for invoice_queue_recurring_group in pager.items %}
 		{% if loop.first %}
 		<div class="card">
 			<div class="card-header">
 				{{ base.pager_count(pager.item_count) }}
 			</div>
-			<div class="card-body">
+			<div class="card-body table-responsive">
 				<table class="table table-striped table-hover table-condensed">
 					<thead>
 						<tr>
