--- a/app/admin/template/administrative/user.twig
+++ b/app/admin/template/administrative/user.twig
@@ -12,7 +12,7 @@
 				<h4>{% trans "Users" %}</h4>
 			</div>
 			<div class="col">
-				<div class="float-end">
+				<div class="float-md-end">
 					<nav aria-label="breadcrumb">
 						<ol class="breadcrumb">
 							<li class="breadcrumb-item">
@@ -31,7 +31,7 @@
 
 		<div class="card">
 			<div class="card-header">
-				<ul class="nav nav-tabs card-header-tabs" data-bs-tabs="tabs">
+				<ul class="nav nav-pills flex-column flex-sm-row nav-fill">
 					<li class="nav-item">
 						<a href="/administrative/user/detail?id={{ user.id }}" class="nav-link {% if env.module.get_name() == 'administrative_user_detail' %}active{% endif %}">
 							{% trans "Details" %}
@@ -54,119 +54,7 @@
 
 	{% elseif action == 'add' %}
 
-		<div class="row">
-			<div class="col">
-				<h4>{% trans "Users" %}</h4>
-			</div>
-			<div class="col">
-				<div class="float-end">
-					<nav aria-label="breadcrumb">
-						<ol class="breadcrumb">
-							<li class="breadcrumb-item">
-								<a href="/administrative/user">
-									{% trans "Users" %}
-								</a>
-							</li>
-							<li class="breadcrumb-item active">
-								{% trans "Add user" %}
-							</li>
-						</ol>
-					</nav>
-				</div>
-			</div>
-		</div>
-
-		{% if errors is defined %}
-			{{ base.alert('danger', "The form contains mistakes. Please correct them."|trans) }}
-		{% endif %}
-
-		<div class="card">
-			<div class="card-header">
-				{% trans "Details" %}
-			</div>
-			<div class="card-body">
-				<form class="form form-horizontal form-condensed" method="post" action="/administrative/user?action=add">
-					<div class="row mb-1 mb-md-3">
-						<label for="username" class="col-form-label col-12 col-md-3 text-md-end">{% trans "Username" %}</label>
-						<div class="col-md-9 col-12">
-							<input type="text" name="user[username]" id="username" class="form-control {% if 'username' in errors|keys %} is-invalid {% endif %}" value="{{ env.post.user.username }}">
-							{{ form.invalid_input('username', errors) }}
-						</div>
-					</div>
-
-					<div class="row mb-1 mb-md-3">
-						<label for="firstname" class="col-form-label col-12 col-md-3 text-md-end">{% trans "Firstname" %}</label>
-						<div class="col-md-9 col-12">
-							<input type="text" name="user[firstname]" id="firstname" class="form-control {% if 'firstname' in errors|keys %} is-invalid{% endif %}" value="{{ env.post.user.firstname }}">
-							{{ form.invalid_input('firstname', errors) }}
-						</div>
-					</div>
-
-					<div class="row mb-1 mb-md-3">
-						<label for="lastname" class="col-form-label col-12 col-md-3 text-md-end">{% trans "Lastname" %}</label>
-						<div class="col-md-9 col-12">
-							<input type="text" name="user[lastname]" id="lastname" class="form-control {% if 'lastname' in errors|keys %} is-invalid{% endif %}" value="{{ env.post.user.lastname }}">
-							{{ form.invalid_input('lastname', errors) }}
-						</div>
-					</div>
-
-					<div class="row mb-1 mb-md-3">
-						<label for="email" class="col-form-label col-12 col-md-3 text-md-end">{% trans "Email" %}</label>
-						<div class="col-md-9 col-12">
-							<input type="text" name="user[email]" id="email" class="form-control {% if 'email' in errors|keys %} is-invalid{% endif %}" value="{{ env.post.user.email }}">
-							{{ form.invalid_input('email', errors) }}
-						</div>
-					</div>
-
-					<div class="row mb-1 mb-md-3">
-						<label for="password" class="col-form-label col-12 col-md-3 text-md-end">{% trans "Password" %}</label>
-						<div class="col-md-9 col-12">
-							<input type="password" name="user[password]" id="password" class="form-control {% if 'password' in errors|keys %} is-invalid{% endif %}" value="{{ env.post.user.password }}">
-							{{ form.invalid_input('password', errors) }}
-						</div>
-					</div>
-
-					<div class="row mb-1 mb-md-3">
-						<label for="language_id" class="col-form-label col-12 col-md-3 text-md-end">{% trans "Language" %}</label>
-						<div class="col-md-9 col-12">
-							<select name="user[language_id]" id="language_id" class="form-control">
-								{% for language in languages %}
-									<option value="{{ language.id }}"{% if env.post.user.language_id == language.id %} selected{% endif %}>{{ language.name }}</option>
-								{% endfor %}
-							</select>
-						</div>
-					</div>
-
-					<div class="row mb-1 mb-md-3">
-						<label for="language_id" class="col-form-label col-12 col-md-3 text-md-end">{% trans "Role" %}</label>
-						<div class="col-md-9 col-12">
-							<select name="user[role_id]" id="language_id" class="form-control">
-								{% for role in roles %}
-									<option value="{{ role.id }}"{% if role.id == user.role_id %} selected{% endif %}>{{ role.name }}</option>
-								{% endfor %}
-							</select>
-						</div>
-					</div>
-
-					<div class="row mb-1 mb-md-3">
-						<label for="language_id" class="col-form-label col-12 col-md-3 text-md-end">{% trans "Receive expired invoice overview" %}</label>
-						<div class="col-md-9 col-12">
-							<div class="form-check form-switch form-control-plaintext">
-								<input type="checkbox" class="form-check-input" data-group-cls="btn-group-xs" name="user[receive_expired_invoice_overview]">
-							</div>
-						</div>
-					</div>
-
-					<div class="row mb-1 mb-md-3">
-						<div class="offset-md-3">
-							<button class="btn btn-primary">
-								{% trans "Save" %}
-							</button>
-						</div>
-					</div>
-				</form>
-			</div>
-		</div>
+		{% include 'administrative/user/add.twig' %}
 
 	{% else %}
 
@@ -175,7 +63,7 @@
 		</div>
 
 		{% if env.sticky_session.message is defined %}
-			{{ base.alert('success', 'User added successfully'|trans) }}
+			{{ base.alert('success', 'User added successfully'|trans, false, 'offset-0', 'col-12') }}
 		{% endif %}
 
 		<div class="card">
