f#30051 Changed place of the invoice link in creditnote details

--- a/app/admin/template/sales/creditnote.twig
+++ b/app/admin/template/sales/creditnote.twig
@@ -246,6 +246,9 @@
 							<dt>{% trans "Credit note number" %}</dt>
 							<dd>{{ creditnote.id }}</dd>
 
+							<dt>{% trans "Based on invoice:" %}</dt>
+							<dd><a href="/sales/invoice?action=edit&id={{ creditnote.invoice_id }}">{{ creditnote.invoice_id }}</a></dd>
+
 							<dt>{% trans "Created" %}</dt>
 							<dd>{{ creditnote.created|datetime() }}</dd>
 
@@ -350,10 +353,6 @@
 			<div class="panel-heading d-flex ">
 				<span>
 					{% trans "Invoice details" %}
-				</span>
-				<span class="based-on-invoice">
-					{% trans "Creditnote based on invoice:" %}
-					<a href="/sales/invoice?action=edit&id={{ creditnote.invoice_id }}">{{ creditnote.invoice_id }}</a>
 				</span>
 			</div>
 			<div class="panel-body">
