--- a/app/admin/template/financial/account/modal.edit_account.twig
+++ b/app/admin/template/financial/account/modal.edit_account.twig
@@ -98,6 +98,13 @@
 			<input type="checkbox" data-group-cls="btn-group-xs"  name="bank_account[default_for_payment]" {% if bank_account.default_for_payment %}checked{% endif %}>
 		</div>
 	</div>
+
+	<div class="form-group">
+		<label class="col-xs-4 control-label">{% trans "Archived" %}</label>
+		<div class="col-xs-8">
+			<input type="checkbox" data-group-cls="btn-group-xs"  name="bank_account[archived]" {% if bank_account.archived is not null %}checked{% endif %}>
+		</div>
+	</div>
 </form>
 
 <script type="text/javascript">
