--- a/app/admin/template/administrative/document/creditnote.twig
+++ b/app/admin/template/administrative/document/creditnote.twig
@@ -91,6 +91,7 @@
 					<th>{{ pager.create_header('#'|trans, 'id')|raw }}</th>
 					<th>{{ pager.create_header('Date'|trans, 'document.date')|raw }}</th>
 					<th>{{ pager.create_header('Accounting ID'|trans, 'document_incoming_invoice.accounting_identifier')|raw }}</th>
+					<th>{{ pager.create_header('Supplier'|trans, 'supplier.company')|raw }}</th>
 					<th>{{ pager.create_header('Title'|trans, 'title')|raw }}</th>
 					<th>{% trans "Tags" %}</th>
 					<th>{{ pager.create_header('Paid'|trans, 'paid')|raw }}</th>
@@ -106,6 +107,7 @@
 			<td>{{ document.id }}</td>
 			<td>{{ document.date|date }}</td>
 			<td>{{ document.accounting_identifier }}</td>
+			<td>{{ document.supplier.company }}</td>
 			<td>{{ document.title }}</td>
 			<td>
 				{% set document_tags = [] %}
