--- a/app/admin/template/sales/creditnote.twig
+++ b/app/admin/template/sales/creditnote.twig
@@ -247,7 +247,7 @@
 							<dd>{{ creditnote.id }}</dd>
 
 							<dt>{% trans "Based on invoice:" %}</dt>
-							<dd><a href="/sales/invoice?action=edit&id={{ creditnote.invoice_id }}">{{ creditnote.invoice_id }}</a></dd>
+							<dd><a href="/sales/invoice?action=edit&id={{ creditnote.invoice_id }}">{{ creditnote.invoice.number }}</a></dd>
 
 							<dt>{% trans "Created" %}</dt>
 							<dd>{{ creditnote.created|datetime() }}</dd>
