--- a/app/admin/template/administrative/customer/contact.twig
+++ b/app/admin/template/administrative/customer/contact.twig
@@ -31,7 +31,7 @@
 	<div class="col-xs-3 customer_contact">
 		<div class="panel panel-default">
 			<div class="panel-body text-center">
-				<a class="btn btn-default" href="#manage-customer-contact" data-toggle="modal" data-customer-id="{{ customer.id }}" data-customer-contacts="{{ customer_contacts|length }}">
+				<a class="btn btn-default" href="#manage-customer-contact" data-toggle="modal" data-customer-id="{{ customer.id }}" data-customer-contact-id="" data-customer-contacts="{{ customer_contacts|length }}">
 					{% trans "Create new" %}
 				</a>
 			</div>
