Add VAT 0% in the percentages accepted for incoming invoice or creditnote

--- a/app/admin/template/administrative/document/document.form.invoice.twig
+++ b/app/admin/template/administrative/document/document.form.invoice.twig
@@ -89,7 +89,7 @@
 			vat = Math.round(vat * 100) / 100
 			console.log(vat);
 
-			if (vat != 21 && vat != 6 && vat != 12) {
+			if (vat != 21 && vat != 12 && vat != 6 && vat != 0) {
 				$('input[name="document[price_incl]"]').popover({
 					container: 'body'
 				});
