Fixed an issue with totals when importing credit note

--- a/app/admin/template/administrative/document.twig
+++ b/app/admin/template/administrative/document.twig
@@ -264,6 +264,10 @@
 			$(function (){
 				$('#edit-form').on('submit', function (){
 					classname = $('#slc_classname').val().toLowerCase();
+					if (classname == 'document_incoming_creditnote') {
+						// invoice & creditnote share the same fieldset
+						classname = 'document_incoming_invoice';
+					}
 					$('[class^="classname_document_"]').not('[class^="classname_' + classname + '"]').remove();
 				})
 			});
